# Ray-Marching-3D-Modeler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  main.cpp
src/: Main.cpp  SDFTree.cpp  SDFTree.h  ShaderBuilder.cpp  ShaderBuilder.h  ShaderConfig.h  main.cpp  makefile  rayModelGui.h  sdfBuffer.cpp  sdfBuffer.h  sdfInfo.sh  sdfTree.h  viewPortCamera.cpp  viewPortCamera.h
src/UI/: Help.cpp  Help.h  NodeProperties.cpp  NodeProperties.h  Panel.cpp  Panel.h  ToolBar.cpp  ToolBar.h  TreeView.cpp  TreeView.h
src/shaders/: fs_raymarching.sc  fs_testmarching.sc  iq_sdf.sc  makefile  sdfDefinitions.h  sdfHelper.sc  stack.sh  vs_raymarching.sc
